--- a/app/views/layouts/_register_modal.html.haml
+++ b/app/views/layouts/_register_modal.html.haml
@@ -2,14 +2,39 @@
   .modal-dialog
     .modal-content
       .modal-body
-        %h2.center Sign up for now for a different surprise in your inbox every day until Christmas
-        %h5.center Join the Wandering Man Newsletter to be the first to hear about Tour Dates, New Music, and More from Charles Ellsworth
+        %h2 Hey Everyone!
         %form#registration_form
           .form-group
             %input#register_email.form-control{name: 'email', placeholder: "Enter email", type: 'email'}
             %hr
-            = image_tag 'sleigh.jpg', class: 'newsletter-picture'
+            = image_tag 'register.jpg', class: 'newsletter-picture'
 
           .pull-right
             %button.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
             %button.btn.btn-inverse{type: 'submit'} Submit
+        .clearfix
+        %hr
+        %p I hope you have all had a great New Year so far and enjoyed your break from me bothering you for the 12 Days of Wildcat :).  I'm going to be reaching out to all of the drawing winners this week to get everything sorted and mail out your gifts as soon as possible, so keep a heads up for that.
+
+        %p As i've said before, i'm so excited about the future and what this year has to bring for me.  I'm working on getting all the writing and planning done for the next record that I'll be recording with producer Bob Hoag at Flying Blanket Recording in Mesa, AZ.  This record and this year are all about trying to take risks and better define myself as an artist.  It's very exciting.
+
+        %p I am planning a tour to make my way out West and am having some trouble booking shows at the moment.  If you all have any leads on bands or venues I should contact, or if you live in one of the following and feel like hosting a house show, that would be amazing. Please feel free to reach out to me by replying to this email and letting me know!
+
+        %ul.list-unstyled
+          %li Baltimore/ Washington D.C.
+          %li Chapel Hill / Durham, North Carolina
+          %li Ashville, North Carolina
+          %li Knoxville, TN
+          %li Dallas, TX
+          %li Houston, TX
+          %li San Antonio, TX
+          %li Austin, TX
+          %li Denton, TX
+          %li Tulsa, OK
+          %li Lawrence, KS
+          %li Aspen, CO
+          %li Grand Junction, CO
+
+        %p I'm very excited for all the prospects the New Year brings for all of us, and hope you are all as optimistic about it as I am.
+
+        %p -Wildcat
