--- a/app/assets/stylesheets/promotion.css.scss
+++ b/app/assets/stylesheets/promotion.css.scss
@@ -21,24 +21,37 @@
   border-radius: 3px;
 }
 .thermometer-outer-h {
-  height: 20px;
+  height: 50px;
   width: 100%;
 }
 .thermometer-outer-v {
   height: 200px;
-  width: 20px;
+  width: 50px;
 }
 .thermometer-inner {
   background: #5cb85c;
 }
 .thermometer-inner-h {
   border: 1px solid #c4c4c4;
-  height: 20px;
+  height: 50px;
 }
 .thermometer-inner-v {
   width: 20px;
 }
 
 .thermometer {
-  box-shadow: 2px 2px 7px 1px;
 }
+
+.pad-0 {
+  padding: 0 !important;
+}
+
+.donate-section {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.white-background {
+  background-color: white;
+}
+
