--- a/app/views/promotion/contribute.html.haml
+++ b/app/views/promotion/contribute.html.haml
@@ -18,10 +18,12 @@
     %form#contribution_form.hide{action: '/send_contribution', method: 'post'}
       %input#contribution_amount{type: 'hidden', name: 'contribution_amount'}
       = hidden_field_tag :authenticity_token, form_authenticity_token
-    %span.money-label.donation_label.label.label-success.pointer{value: '10'} $10
-    %span.money-label.donation_label.label.label-success.pointer{value: '25'} $25
-    %span.money-label.donation_label.label.label-success.pointer{value: '50'} $50
-    %span.money-label.label.label-success.pointer.other_contribution Other
+    .col-md-12
+      %span.money-label.donation_label.label.label-success.pointer{value: '10'} $10
+      %span.money-label.donation_label.label.label-success.pointer{value: '25'} $25
+      %span.money-label.donation_label.label.label-success.pointer{value: '50'} $50
+    .col-md-12
+      %span.money-label.label.label-success.pointer.other_contribution Other
   %h3.contribution_redirect_message.hide.text-success
     Redirecting You To Paypal, Please Wait...
   %hr
