remove card regex

--- a/app/views/promotion/_payment_modal.html.haml
+++ b/app/views/promotion/_payment_modal.html.haml
@@ -41,7 +41,7 @@
           .form-group
             %label.col-sm-2.control-label{for: '#card_number'} Card Number
             .col-sm-10
-              %input#card_number.form-control.validate-required{'auto-complete' => 'off', 'data-encrypted-name' => 'number', type: 'text', placeholder: 'Card Number', name: 'number', required: true, maxlength: '19', pattern: '\d{4}\s*\d{4}\s*\d{4}\s*\d{4}'}
+              %input#card_number.form-control.validate-required{'auto-complete' => 'off', 'data-encrypted-name' => 'number', type: 'text', placeholder: 'Card Number', name: 'number', required: true, maxlength: '19'}
           .form-group
             %label.col-sm-2.control-label{for: '#cvv'} Card CVV
             .col-sm-10
